fix: strange scrollbar appears, while be packaged as MacOS App with Tauri2.

--- a/src/components/Article/ArticleList.css
+++ b/src/components/Article/ArticleList.css
@@ -3,7 +3,13 @@
   contain: strict;
   padding: 10px;
   height: 100%;
-  overflow-x: hidden;
+
+  /**
+   * When using this style, strange scrollbar appears, while be packaged as MacOS App with Tauri2.
+   * Removing this style does not affect other behaviors.
+   */
+  /* overflow-x: hidden; */
+
   overscroll-behavior-y: contain;
 }
 
